# NumericalOptimization

./: CMakeLists.txt  README.md  functions.h  functions_test.cpp  gmon.out  la.h  la_test.cpp  lautils.h  library.cpp  library.h  line_searches.h  linear_algebra.h  lnsearch.h  lnsearch_test.cpp  main.cpp  main_benchmark.cpp  methods.h  test_multithread.h
functions/: almost_pert_quad.h  ap_quad.h  cube.h  diagonal1.h  explin1.h  ext_TET.h  ext_beale.h  ext_himmelblau.h  ext_penalty.h  ext_psc1.h  ext_quad_pen_qp1.h  ext_quad_pen_qp2.h  ext_rosenbrock.h  ext_white_and_holst.h  extended_himmelblau.h  extended_psc1.h  extended_qp1.h  extended_qp2.h  extended_rosenbrock.h  fletchcr.h  full_hessian2.h  full_hessian_fh2.h  function.h  gen_psc1.h  gen_rosenbrock.h  generalized_psc1.h  generalized_rosenbrock.h  hager.h  part_pert_quad.h  pp_quad.h  raydan1.h
line_searches/: approx_wolfe.h  armijo.h  base_line_search.h  binary.h  fixed_line_search.h  fixed_step_size.h  goldstein.h  line_search.h  strong_wolfe.h  wolfe.h
methods/: base_method.h  fletcher_reeves.h  gradient_descent.h  momentum.h
methods/conjugate_gradient/: cg_descent.h  dai_yuan.h  fletcher_reeves.h  hestenes_stiefel.h  polak_ribiere.h
methods/gradient/: adadelta.h  adagrad.h  adam.h  adamax.h  amsgrad.h  gradient_descent.h  momentum.h  nadam.h  nesterov.h  rmsprop.h
methods/gradient_descent/: gradient_descent.h  momentum.h
methods/quasi_newton/: bfgs.h  dfp.h  l_bfgs.h  sr1.h
utilities/: linear_algebra.h
